--- a/pagina-web-personal/index.html
+++ b/pagina-web-personal/index.html
@@ -43,7 +43,7 @@
             <div class="cont-banner">
                 <img src="img/img principal.jpg" alt="" id="img-principal">
                 <h1>Jefferson Robles</h1>
-                <p>Soy un estudiante de la Pontificia Universidad Catolica del Perú. Estudio la carrera de Ingenieria Informatica y estoy cursando el quinto ciclo. Tengo conocimiento en desarrollo web, lenguaje sql, c y c++.</p>
+                <p>Soy un estudiante de la Pontificia Universidad Catolica del Perú. Estudio la carrera de Ingenieria Informatica y estoy cursando el septimo ciclo. Tengo conocimiento en desarrollo web, lenguaje sql, Python, Java  c y c++.</p>
             </div>
         </div>
     </div>
@@ -77,13 +77,13 @@
                     <div class="especialidad">
                         <img src="img/autodesk.jpg" alt=""class="img-especialidad">
                         <div class="cont-especialidad">
-                        <h3>Lenguaje C</h3>
+                        <h3>Java</h3>
                         </div>
                     </div>
                     <div class="especialidad">
                         <img src="img/diseño_grafico.jpg" alt=""class="img-especialidad">
                         <div class="cont-especialidad">
-                        <h3>Lenguaje C++</h3>
+                        <h3>Lenguaje C y C++</h3>
                         </div>
                     </div>
                     <div class="especialidad">
