Actualizacion de texto - "Sobre Mi"

--- a/pagina-web-personal/index.html
+++ b/pagina-web-personal/index.html
@@ -67,7 +67,7 @@
             <aside class="contenido-one-sub">
                 <h1>SOBRE MI</h1>
                 <hr>
-                <p>Soy un estudiante de la Pontificia Universidad Catolica del Perú. Estudio la carrera de Ingenieria Informatica y estoy cursando el quinto ciclo. Tengo conocimiento en desarrollo web, lenguaje sql, c y c++.</p>
+                <p>Soy un estudiante de la Pontificia Universidad Catolica del Perú. Estudio la carrera de Ingenieria Informatica y estoy cursando el septimo ciclo. Tengo conocimiento en desarrollo web, lenguaje sql, c y c++.</p>
                 <button type="" id="boton-curriculum">DESCARGAR CURRICULUM</button>
             </aside>
             <h1 align="center">ESPECIALIDAD</h1>
